--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,14 @@
 ---
 title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+excerpt: "Page not found. These are not the Droids you are looking for."
 sitemap: false
 permalink: /404.html
+header:
+  teaser: /assets/images/train.png
+  og_image: /assets/images/train.png
+  overlay_image: /assets/images/train.png
+  overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
 ---
 
-Sorry, but the page you were trying to view does not exist.
+
+![Foo]({{ '/assets/images/walle_eve.jpg' | relative_url }})
