--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,14 +1,14 @@
 ---
 title: "Page Not Found"
-excerpt: "Page not found. These are not the Droids you are looking for."
+excerpt: "These are not the Droids you are looking for."
 sitemap: false
 permalink: /404.html
 header:
-  teaser: /assets/images/train.png
-  og_image: /assets/images/train.png
-  overlay_image: /assets/images/train.png
+  teaser: /assets/images/walle_eve.jpg
+  og_image: /assets/images/walle_eve.jpg
+  overlay_image: /assets/images/walle_eve.jpg
   overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
 ---
 
-
+# These are not the Droids you are looking for
 ![Foo]({{ '/assets/images/walle_eve.jpg' | relative_url }})
